# Programacion24-25

./: README.md
Advent_Code/2024/: 12321.c  2  Day_1  Day_1.c  Day_2  Day_2.c  Day_2.cpp  Day_3  Day_3.cpp  Day_5  Day_5.cpp  c++  c++.cpp
Gazebo_projects/: building_robot.sdf  miprimermundo.sdf  miprimerxml.xml  plantilla.sdf  sensor.sdf  sensors.sdf
Gazebo_projects/Mover_Robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Gazebo_projects/Mover_Robot/install/simulacion/lib/simulacion/: robot_move_cpp
Gazebo_projects/Mover_Robot/install/simulacion/share/simulacion/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
Gazebo_projects/Mover_Robot/install/simulacion/share/simulacion/ejemplos/: robot_move_cpp.cpp
Gazebo_projects/Mover_Robot/install/simulacion/share/simulacion/environment/: ament_prefix_path.sh
Gazebo_projects/Mover_Robot/install/simulacion/share/simulacion/robots/caja_amarilla/: inertial_macros.xacro  robot_core.xacro
Gazebo_projects/Mover_Robot/log/: latest_build
Gazebo_projects/Mover_Robot/src/install/: local_setup.bash  local_setup.sh  setup.bash  setup.ps1  setup.sh
Gazebo_projects/Mover_Robot/src/install/simulacion/share/ament_index/resource_index/parent_prefix_path/: simulacion
Gazebo_projects/Mover_Robot/src/install/simulacion/share/simulacion/: package.bash  package.ps1  package.sh
Gazebo_projects/Mover_Robot/src/install/simulacion/share/simulacion/environment/: path.sh
Gazebo_projects/Mover_Robot/src/log/: latest_build
Gazebo_projects/Mover_Robot/src/simulacion/: CMakeLists.txt
Gazebo_projects/Mover_Robot/src/simulacion/launch/: robot_amarillo.launch.py
Gazebo_projects/Mover_Robot/src/simulacion/robots/caja_amarilla/: robot.urdf.xacro
Gazebo_projects/Mover_Robot/src/simulacion/scripts/: robot_move.py
Gazebo_projects/robot_mania/install/: local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh  setup.zsh
Gazebo_projects/robot_mania/install/fws_robot_description/share/fws_robot_description/: package.bash  package.zsh
Gazebo_projects/robot_mania/install/fws_robot_sim/share/fws_robot_sim/: package.bash  package.zsh
Gazebo_projects/robot_mania/log/: latest_build
IPR/: 2.c  5.1  5.1.c  5.2  5.2.c  5.3  5.3.c  5.4  5.4.c  6.3.c  BubbleSort  BubbleSort.cpp  Coordenadasrandom  Coordenadasrandom.c  DNIyNIE  DNIyNIE.c  SwapFunction  SwapFunction.c  crandf  crandf.c  float  float.c  pointers.cpp  projectfinal  projectfinal.c  projectfinaltext
RISC-V/: ArYPer_float.asm  ArYPer_int.asm  Suma10_reales.asm  riscv1.asm  suma10conprint.asm  suma^2.asm
